ทำ Controller ของข้อมูลบุคลากร - fix #26
